# genie-live

./: .gitignore  README.md  pyproject.toml
genie_live/: capture.py  cli.py  monitor.py  server.py
genie_live/static/: app.js  index.html  style.css
tests/: simulate_meeting.py
