[project]
name = "genie-live"
version = "0.1.0"
description = "Real-time meeting monitor with React frontend"
requires-python = ">=3.9"
dependencies = [
    "genie-core @ git+https://github.com/Simon99/genie-core.git",
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-socketio>=5.3",
]

[project.scripts]
genie-live = "genie_live.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
